--- a/Automation/data/config.properties
+++ b/Automation/data/config.properties
@@ -7,4 +7,4 @@ url http://190.210.184.180/login.do
 username admin
 password manager
 BqUrl https://www.brainyquote.com/
-browser1 chrome
+browser1 chrome b
